--- a/truckMileageTracker/en.lproj/MainStoryboard.storyboard
+++ b/truckMileageTracker/en.lproj/MainStoryboard.storyboard
@@ -20,10 +20,19 @@
                             </pickerView>
                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="onS-Pp-HqM">
                                 <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="LSx-gV-egb"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Select State">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Select State" backgroundImage="BlueButton.png">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="disabled">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="selected" backgroundImage="BlueButtonTapped.png">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                 </state>
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -56,15 +65,15 @@
                             <constraint firstAttribute="trailing" secondItem="onS-Pp-HqM" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="LCb-3E-SBF"/>
                             <constraint firstItem="UhO-td-YDR" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="W4g-FL-qIn"/>
                             <constraint firstItem="onS-Pp-HqM" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="W9D-ZD-q0P"/>
-                            <constraint firstAttribute="bottom" secondItem="onS-Pp-HqM" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="f39-F4-hj0"/>
                             <constraint firstItem="UhO-td-YDR" firstAttribute="trailing" secondItem="16" secondAttribute="trailing" type="default" id="f93-GS-ThO"/>
                             <constraint firstItem="INz-8U-8xo" firstAttribute="centerX" secondItem="onS-Pp-HqM" secondAttribute="centerX" type="default" id="gVc-S0-xzJ"/>
                             <constraint firstItem="UhO-td-YDR" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="kci-ex-YPL"/>
                             <constraint firstAttribute="bottom" secondItem="INz-8U-8xo" secondAttribute="bottom" constant="87" id="nHA-R8-FpR"/>
                             <constraint firstItem="27t-E7-D36" firstAttribute="bottom" secondItem="UhO-td-YDR" secondAttribute="bottom" type="default" id="qZw-w8-DZo"/>
+                            <constraint firstAttribute="bottom" secondItem="onS-Pp-HqM" secondAttribute="bottom" constant="19" id="x7K-Me-1Bs"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="more" id="7"/>
+                    <tabBarItem key="tabBarItem" title="Add Mileage" image="segment_check.png" id="7"/>
                     <connections>
                         <outlet property="mileagePicker" destination="UhO-td-YDR" id="gSK-l2-GvG"/>
                         <outlet property="selectButton" destination="onS-Pp-HqM" id="sMF-1X-HNG"/>
@@ -94,10 +103,19 @@
                                 </connections>
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WsZ-uA-DaZ">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="R4R-am-v5k"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Show Statistics">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Show Statistics" backgroundImage="BlueButton.png">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="disabled">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="selected" backgroundImage="BlueButtonTapped.png">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                 </state>
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -128,8 +146,8 @@
                             <constraint firstItem="Emi-Ay-2YJ" firstAttribute="trailing" secondItem="17" secondAttribute="trailing" type="default" id="MdD-qa-dUd"/>
                             <constraint firstItem="WsZ-uA-DaZ" firstAttribute="top" secondItem="zOU-nj-OFL" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="RRT-nQ-07P"/>
                             <constraint firstItem="zOU-nj-OFL" firstAttribute="centerX" secondItem="WsZ-uA-DaZ" secondAttribute="centerX" type="default" id="S1y-hB-Pyf"/>
-                            <constraint firstAttribute="bottom" secondItem="WsZ-uA-DaZ" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="UbZ-ZK-mo6"/>
                             <constraint firstItem="Emi-Ay-2YJ" firstAttribute="top" secondItem="17" secondAttribute="top" type="default" id="XRk-DK-7h5"/>
+                            <constraint firstAttribute="bottom" secondItem="WsZ-uA-DaZ" secondAttribute="bottom" constant="19" id="dsP-y3-IkV"/>
                             <constraint firstItem="qzw-Qx-lJL" firstAttribute="trailing" secondItem="17" secondAttribute="trailing" type="default" id="g0B-Co-Ij9"/>
                             <constraint firstItem="qzw-Qx-lJL" firstAttribute="leading" secondItem="17" secondAttribute="leading" type="default" id="ioD-tf-6ck"/>
                             <constraint firstItem="WsZ-uA-DaZ" firstAttribute="leading" secondItem="17" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="jpV-W7-z02"/>
@@ -169,6 +187,11 @@
             <point key="canvasLocation" x="132" y="180"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="BlueButton.png" width="480" height="92"/>
+        <image name="BlueButtonTapped.png" width="480" height="92"/>
+        <image name="segment_check.png" width="24" height="24"/>
+    </resources>
     <classes>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
